FIX : overflow overlay

--- a/frontend/src/styles/Game.scss
+++ b/frontend/src/styles/Game.scss
@@ -13,7 +13,7 @@ $paddle_height: 150px;
   #game-box {
     z-index: 1;
     width: 100%;
-    overflow: auto;
+    overflow: overlay;
     height: 80%;
     padding: 3%;
 
